--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   smooth_page_indicator: ^1.0.0+2
   slide_drawer: ^1.0.3
   flutter_ringtone_player: ^3.1.1
+  google_maps_flutter: ^2.1.2
+  toggle_switch: ^1.4.0
 
 
 dev_dependencies:
