--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,8 @@ dependencies:
   flutter_ringtone_player: ^3.1.1
   google_maps_flutter: ^2.1.2
   toggle_switch: ^1.4.0
-
+  percent_indicator: ^4.0.0
+  connectivity_plus: ^2.2.1
 
 dev_dependencies:
   flutter_test:
