--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   toggle_switch: ^1.4.0
   percent_indicator: ^4.0.0
   connectivity_plus: ^2.2.1
+  pinput: ^2.1.4
+  audioplayers: ^0.20.1
 
 dev_dependencies:
   flutter_test:
