--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   connectivity_plus: ^2.2.1
   pinput: ^2.1.4
   audioplayers: ^0.20.1
+  animated_widgets: ^1.1.0
 
 dev_dependencies:
   flutter_test:
