--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   toggle_switch: ^1.4.0
   percent_indicator: ^4.0.0
   connectivity_plus: ^2.2.1
+  network_connectivity: ^0.0.1
+  internet_connection_checker: ^0.0.1+3
+  universal_internet_checker: ^0.1.2
   pinput: ^2.1.4
   audioplayers: ^0.20.1
   animated_widgets: ^1.1.0
