--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   pinput: ^2.1.4
   audioplayers: ^0.20.1
   animated_widgets: ^1.1.0
+  animated_radio_buttons: ^1.0.0
+  
 
 dev_dependencies:
   flutter_test:
