--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   animated_radio_buttons: ^1.0.0
   shared_preferences: ^2.0.13
   overlay_dialog: ^0.2.1
+  provider: ^6.0.2
   
 
 dev_dependencies:
